--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_IngresoCompartido.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_IngresoCompartido.cshtml
@@ -41,7 +41,7 @@
         settings.InitNewRow = (s, e) =>
         {
             e.NewValues["Porcentaje"] = 0;
-            e.NewValues["Observacion"] = 0;
+            e.NewValues["Observacion"] = "";
         };
 
         settings.Columns.Add(column =>
