--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_CobrosLiquidacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_CobrosLiquidacion.cshtml
@@ -15,7 +15,7 @@
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "LiquidacionTarjetaCredito", Action = "EditingDelete", Area = "CuentasPorPagar" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "LiquidacionTarjetaCredito", Action = "EditingDelete", Area = "CuentasPorCobrar" };
         settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuración click derecho
@@ -36,8 +36,7 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-
-        settings.Columns.Add("IdLiquidacion", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdCobro", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(10);
@@ -45,7 +44,6 @@
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
-        settings.Columns.Add("IdCobro", "IdCobro").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(30);
         settings.Columns.Add("cr_observacion", "Observación").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
@@ -55,6 +53,9 @@
             column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
+        settings.Settings.ShowFooter = true;
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor").DisplayFormat = "{0:c2}";
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
