--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_MotivosLiquidacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_MotivosLiquidacion.cshtml
@@ -4,30 +4,29 @@
     {
         settings.Name = "GridViewPartial_MotivosLiquidacion";
         settings.CallbackRouteValues = new { Controller = "LiquidacionTarjetaCredito", Action = "GridViewPartial_MotivosLiquidacion" };
-        settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "Secuencia";
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
-        settings.SettingsPager.Visible = true;
-        settings.Settings.ShowGroupPanel = false;
-        settings.Settings.ShowFilterRow = true;
-        settings.SettingsBehavior.AllowSelectByRowClick = false;
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "LiquidacionTarjetaCredito", Action = "EditingDelete", Area = "CuentasPorPagar" };
-        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-
-        //Configuración click derecho
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
-        settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = false;
+        settings.Width = Unit.Percentage(100);
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "LiquidacionTarjetaCredito", Action = "EditingAddNewMotivo", Area = "CuentasPorCobrar" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "LiquidacionTarjetaCredito", Action = "EditingUpdateMotivo", Area = "CuentasPorCobrar" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "LiquidacionTarjetaCredito", Action = "EditingDeleteMotivo", Area = "CuentasPorCobrar" };
 
         settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = false;
-        settings.CommandColumn.ShowEditButton = false;
+        settings.CommandColumn.ShowNewButton = true;
+        settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
+
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -36,9 +35,29 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-
-        settings.Columns.Add("IdLiquidacion", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdMotivo", "IdMotivo").Width = Unit.Percentage(40);
+        //Funcion para inicializar fila al presionar nuevo
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["IdMotivo"] = null;
+            e.NewValues["Valor"] = "0";
+        };
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Motivo";
+            column.FieldName = "IdMotivo";
+            column.Width = Unit.Percentage(80);
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.Width = Unit.Percentage(100);
+                p.ValueField = "IdMotivo";
+                p.TextField = "Descripcion";
+                p.DropDownStyle = DropDownStyle.DropDownList;
+                p.ValueType = typeof(decimal);
+                p.BindList(new Core.Erp.Bus.CuentasPorCobrar.cxc_MotivoLiquidacionTarjeta_Bus().GetList(Convert.ToInt32(Core.Erp.Web.Helps.SessionFixed.IdEmpresa),false));
+                p.Columns.Add("Descripcion", "Motivo").Width = Unit.Percentage(100);
+            });
+        });
+        /*
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(10);
@@ -46,11 +65,19 @@
             column.Caption = "Porcentaje";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
+        */
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(10);
             column.FieldName = "Valor";
             column.Caption = "Valor";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().SpinEdit(p =>
+            {
+                p.Width = Unit.Percentage(100);
+                p.MinValue = 0;
+                p.NumberFormat = SpinEditNumberFormat.Number;
+                p.DisplayFormatString = "{0:N2}";
+            });
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
     });
