--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -19,21 +19,12 @@
 }
 
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-<script type="text/javascript">
-    function OnBeginCallback(s, e) {
-        e.customArgs["IdDivision"] = IdDivision.GetValue();
-    }
-
-    function OnBeginCallback(s, e) {
-        e.customArgs["det_IdDivision"] = IDividion.GetValue();
-        console.log(e.customArgs["det_IdDivision"]);
-    }
-</script>
 @using (Html.BeginForm("Nuevo", "Empleado", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdPersona);
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdEmpleado);
+    @Html.HiddenFor(q => q.IdTransaccionSession);
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -824,6 +815,17 @@
     $("#pe_cedulaRuc").keyup(function () {
         validar();
     });
+
+    function OnBeginCallback(s, e) {
+        e.customArgs["IdDivision"] = IdDivision.GetValue();
+    }
+
+    function OnSelectedDivisionChanged() {
+        GridViewPartial_IngresoCompartido.GetEditor("IdArea_det").PerformCallback();
+    }
+    function AreaComboBox_BeginCallback(s, e) {
+        e.customArgs["IdDivision_det"] = IDividion_det.GetValue();
+    }
 
     function mostrar_ingreso_compartido() {
         var IngresoCompartido = Tiene_ingresos_compartidos.GetValue();
