--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbDivision_IngresoCompartido.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbDivision_IngresoCompartido.cshtml
@@ -2,7 +2,7 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IDividion";
+        settings.Name = "IDividion_det";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
@@ -14,8 +14,9 @@
         settings.Properties.ValueField = "IdDivision";
         settings.Properties.ValueType = typeof(int);
         settings.Properties.Columns.Add("IdDivision", "ID", 10);
-        settings.Properties.Columns.Add("Descripcion", "Descripción", 90);
+        settings.Properties.Columns.Add("Descripcion", "Descripción", 90);        
         settings.Properties.FilterMinLength = 3;
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedDivisionChanged";
     })
      .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_list_bajo_demanda_division_ingresocompartido, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_info_bajo_demanda_division_ingresocompartido)    
     .Bind((Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_x_division_x_area_Info) || Model.GetType() == typeof(List<Core.Erp.Info.RRHH.ro_empleado_x_division_x_area_Info>)) ? "" : Model);
