--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Modificar.cshtml
@@ -50,7 +50,7 @@
         selectedIDs = values.join(',');
     }
 
-function MostrarModal() {
+    function MostrarModal() {
         selectedIDs = "";
 
         var datos = {
@@ -80,7 +80,7 @@ function MostrarModal() {
 
     function armar_diario() {
         var caja = $("#IdCaja").val();
-        var tipo_movimiento = $("#IdTipoMovi").val();
+        var tipo_movimiento = IdTipoMovi.GetValue();
         var monto = $("#cr_Valor").val();
 
         var datos = {
@@ -304,7 +304,7 @@ function MostrarModal() {
 
     function armar_diario() {
                         var caja = $("#IdCaja").val();
-                        var tipo_movimiento = $("#IdTipoMovi").val();
+                        var tipo_movimiento = IdTipoMovi.GetValue();
                         var monto = $("#cr_Valor").val();
 
                         var datos = {
