--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/_CmbTipoMovimiento_Ingreso.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/_CmbTipoMovimiento_Ingreso.cshtml
@@ -18,6 +18,7 @@
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "armar_diario";
 
     })
     .BindList(new Core.Erp.Web.Areas.Caja.Controllers.CajaMovimientoIngresoController().get_list_bajo_demanda_TipoMovimiento_Ingreso, new Core.Erp.Web.Areas.Caja.Controllers.CajaMovimientoIngresoController().get_info_bajo_demanda_TipoMovimiento_Ingreso)
