--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Modificar.cshtml
@@ -121,6 +121,23 @@
         </div>
     </div>
 
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="se_distribuye"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.se_distribuye, settings =>
+                           {
+                               settings.Name = "se_distribuye";
+                               settings.Text = "Se distribuye";
+
+                           }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.se_distribuye, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
